sumo/tests/duarouter/flows/errors/vehicle_false_departpos/errors.duarouter
Error: The loader for flow-files from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid departPos definition for vehicle 0.
Quitting (on error).
